# fullstack-drinks-collections

./: README.md
server/: .gitignore  .yapfignore  README.md  pyproject.toml
server/app/: settings.py
